# olitracker

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  package-lock.json  package.json  tsconfig.json
backend/: main.js  main.ts  misc.ts  nationals.ts  ois_team.ts
extra/competitions/: abc.json  gator-luiss.json  icpc.json  ioi.json  mat.json  pre-boi.json  pre-egoi.json  roiti.json  unimi.json
extra/raw/: abc.json  gator-luiss.json  icpc.json  ioi.json  mat.json  pre-boi.json  pre-egoi.json  roiti.json  unimi.json
extra/scripts/: normalizer.py
frontend/: index.html  main.js  main.ts  style.css
frontend/components/dropdown/: dropdown.css  dropdown.html  dropdown.js
frontend/components/table/: table.css  table.html  table.js
frontend/util/: misc.js  misc.ts  stats.js  stats.ts  training.js  training.ts
src/: db_types.ts  main.go  main.rs  oii.rs  ois.rs
src/api/: .env  main.ts  scoring.ts
src/data-collection/: .env  init.sql
src/data-collection/oii/: main.ts  types.ts
src/data-collection/ois/: main.ts  types.ts
src/extra/: extra.go
src/oii/: oii.go  types.go
src/ois/: ois.go  types.go
src/profiles/: profiles.go  types.go
src/types/: types.go
src/website/: index.html  main.js  style.css
website/: index.html  main.js  style.css
